message("Checking cmake version...")                                                                # Printing message...
cmake_minimum_required(VERSION 3.0)                                                                 # Requiring cmake 3.0...

message("")                                                                                         # Printing message...
message("################################################################################")         # Printing message...
message("################################ C/C++ COMPILER ################################")         # Printing message...
message("################################################################################")         # Printing message...

message("Setting project name...")                                                                  # Printing message...
project (examples)                                                                                  # Setting project name...
message("Project name = ${PROJECT_NAME}")                                                           # Printing message...

set(CMAKE_CXX_STANDARD 17)                                                                          # Setting C++17 standard...
set(CMAKE_CXX_STANDARD_REQUIRED ON)                                                                 # Setting complier standard requirement...
set(CMAKE_CXX_EXTENSIONS OFF)                                                                       # Disabling compiler-specific standards...

message("Setting build type...")                                                                    # Printing message...
set(CMAKE_BUILD_TYPE Release)                                                                       # Setting build type...
message("Build type = ${CMAKE_BUILD_TYPE}")                                                         # Printing message...

message("")                                                                                         # Printing message...
message("################################################################################")         # Printing message...
message("################################### Sinusoid ###################################")         # Printing message...
message("################################################################################")         # Printing message...

set(TARGET_1 "sinusoid")                                                                            # Setting executable name...
set(DIRECTORY_1 "Sinusoid/Code")                                                                    # Setting directory name...

message("Adding source files for ${TARGET_1}...")                                                   # Printing message...
aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY_1}/src SRC_1)                              # Getting all Neutrino source files...
set(SOURCES_1                                                                                       # Setting "SOURCES" variable...
  ${SRC_1})                                                                                         # All project source files.

message("Adding build target as executable...")                                                     # Printing message...
add_executable(${TARGET_1} ${SOURCES_1})                                                            # Adding executable...

if(APPLE)                                                                                           # Detecting APPLE...
  message("Adding include files...")                                                                # Printing message...
  set(INCLUDES_1                                                                                    # Setting "INCLUDES" variable...
    ${CMAKE_HOME_DIRECTORY}/${DIRECTORY_1}/include                                                  # Setting example include directory...
    ${NEUTRINO_PATH}/include)                                                                       # Setting Neutrino include directory...
  target_include_directories(                                                                       # Setting include directories...
    ${TARGET_1} PRIVATE                                                                             # Target name.
    ${INCLUDES_1})                                                                                  # All include directories.

  message("Adding linked libraries...")                                                             # Printing message...
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_1}                                                                                     # Target name.
    "-framework OpenGL"                                                                             # OpenGL library.
    "-framework OpenCL"                                                                             # OpenCL library.
    ${GLFW_PATH}/lib-macos/libglfw.3.dylib                                                          # GLFW library.
    "-lm"                                                                                           # "math" library.
    ${NEUTRINO_PATH}/lib/libnu.a)                                                                   # Neutrino library.
endif(APPLE)

if(UNIX AND NOT APPLE)                                                                              # Detecting LINUX...
  message("Adding include files...")                                                                # Printing message...
  set(INCLUDES                                                                                      # Setting "INCLUDES" variable...
    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Example include directory.
    ${NEUTRINO_PATH}/include)                                                                       # Neutrino include directory.
  target_include_directories(                                                                       # Setting include directories...
    ${TARGET_1} PRIVATE                                                                             # Target name.
    ${INCLUDES_1})                                                                                  # All include directories.

  message("Adding linked libraries...")                                                             # Printing message...
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_1}                                                                                     # Target name.
    "-lOpenGL"                                                                                      # OpenGL library.
    "-lOpenCL"                                                                                      # OpenCL library.
    "-ldl"                                                                                          # "libdl" library.
    "-lglfw"                                                                                        # GLFW library.
    "-lm"                                                                                           # "math" library.
    ${NEUTRINO_PATH}/lib/libnu.a)                                                                   # "neutrino" library.
endif(UNIX AND NOT APPLE)

if(WIN32)                                                                                           # Detecting WINDOWS...
  message("Adding include files...")                                                                # Printing message...
  set(INCLUDES_1                                                                                    # Setting "INCLUDES" variable...
    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Example include directory.
    ${NEUTRINO_PATH}/include)                                                                       # Neutrino include directory.
  target_include_directories(                                                                       # Setting include directories...
    ${TARGET_1} PRIVATE                                                                             # Target name.
    ${INCLUDES_1})                                                                                  # All include directories.

  message("Adding linked libraries...")                                                             # Printing message...
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_1}                                                                                     # Target name.
    ${CL_PATH}/lib/x64/OpenCL.lib                                                                   # OpenCL library.
    ${GLFW_PATH}/lib-vc2019/glfw3.lib                                                               # GLFW library.
    ${NEUTRINO_PATH}/lib/nu.lib)                                                                    # "neutrino" library.
endif(WIN32)

message("Setting build directory...")                                                               # Printing message...
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build)                                   # Setting build directory...
message(${CMAKE_HOME_DIRECTORY}/build)                                                              # Printing message...

install(
  TARGETS ${TARGET_1}                                                                               # Target name.
  DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})                                                    # Installation path.

message("DONE!")                                                                                    # Printing message...

message("")                                                                                         # Printing message...
message("################################################################################")         # Printing message...
message("#################################### Cloth #####################################")         # Printing message...
message("################################################################################")         # Printing message...

set(TARGET_2 "cloth")                                                                               # Setting executable name...
set(DIRECTORY_2 "Cloth/Code")                                                                       # Setting directory name...

message("Adding source files for ${TARGET_2}...")                                                   # Printing message...
aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY_2}/src SRC_2)                              # Getting all Neutrino source files...
set(SOURCES_2                                                                                       # Setting "SOURCES" variable...
  ${SRC_2})                                                                                         # All project source files.

message("Adding build target as executable...")                                                     # Printing message...
add_executable(${TARGET_2} ${SOURCES_2})                                                            # Adding executable...

if(APPLE)                                                                                           # Detecting APPLE...
  message("Adding include files...")                                                                # Printing message...
  set(INCLUDES_2                                                                                    # Setting "INCLUDES" variable...
    ${CMAKE_HOME_DIRECTORY}/${DIRECTORY_2}/include                                                  # Setting example include directory...
    ${NEUTRINO_PATH}/include)                                                                       # Setting Neutrino include directory...
  target_include_directories(                                                                       # Setting include directories...
    ${TARGET_2} PRIVATE                                                                             # Target name.
    ${INCLUDES_2})                                                                                  # All include directories.

  message("Adding linked libraries...")                                                             # Printing message...
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_2}                                                                                     # Target name.
    "-framework OpenGL"                                                                             # OpenGL library.
    "-framework OpenCL"                                                                             # OpenCL library.
    ${GLFW_PATH}/lib-macos/libglfw.3.dylib                                                          # GLFW library.
    "-lm"                                                                                           # "math" library.
    ${NEUTRINO_PATH}/lib/libnu.a)                                                                   # Neutrino library.
endif(APPLE)

if(UNIX AND NOT APPLE)                                                                              # Detecting LINUX...
  message("Adding include files...")                                                                # Printing message...
  set(INCLUDES_2                                                                                    # Setting "INCLUDES" variable...
    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Example include directory.
    ${NEUTRINO_PATH}/include)                                                                       # Neutrino include directory.
  target_include_directories(                                                                       # Setting include directories...
    ${TARGET_2} PRIVATE                                                                             # Target name.
    ${INCLUDES_2})                                                                                  # All include directories.

  message("Adding linked libraries...")                                                             # Printing message...
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_2}                                                                                     # Target name.
    "-lOpenGL"                                                                                      # OpenGL library.
    "-lOpenCL"                                                                                      # OpenCL library.
    "-ldl"                                                                                          # "libdl" library.
    "-lglfw"                                                                                        # GLFW library.
    "-lm"                                                                                           # "math" library.
    ${NEUTRINO_PATH}/lib/libnu.a)                                                                   # "neutrino" library.
endif(UNIX AND NOT APPLE)

if(WIN32)                                                                                           # Detecting WINDOWS...
  message("Adding include files...")                                                                # Printing message...
  set(INCLUDES_2                                                                                    # Setting "INCLUDES" variable...
    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Example include directory.
    ${NEUTRINO_PATH}/include)                                                                       # Neutrino include directory.
  target_include_directories(                                                                       # Setting include directories...
    ${TARGET_2} PRIVATE                                                                             # Target name.
    ${INCLUDES_2})                                                                                  # All include directories.

  message("Adding linked libraries...")                                                             # Printing message...
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_2}                                                                                     # Target name.
    ${CL_PATH}/lib/x64/OpenCL.lib                                                                   # OpenCL library.
    ${GLFW_PATH}/lib-vc2019/glfw3.lib                                                               # GLFW library.
    ${NEUTRINO_PATH}/lib/nu.lib)                                                                    # "neutrino" library.
endif(WIN32)

message("Setting build directory...")                                                               # Printing message...
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build)                                   # Setting build directory...
message(${CMAKE_HOME_DIRECTORY}/build)                                                              # Printing message...

install(
  TARGETS ${TARGET_2}                                                                               # Target name.
  DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})                                                    # Installation path.

message("DONE!")                                                                                    # Printing message...

message("")                                                                                         # Printing message...
message("################################################################################")         # Printing message...
message("################################### Gravity ####################################")         # Printing message...
message("################################################################################")         # Printing message...

set(TARGET_3 "gravity")                                                                             # Setting executable name...
set(DIRECTORY_3 "Gravity/Code")                                                                     # Setting directory name...

message("Adding source files for ${TARGET_3}...")                                                   # Printing message...
aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY_3}/src SRC_3)                              # Getting all Neutrino source files...
set(SOURCES_3                                                                                       # Setting "SOURCES" variable...
  ${SRC_3})                                                                                         # All project source files.

message("Adding build target as executable...")                                                     # Printing message...
add_executable(${TARGET_3} ${SOURCES_3})                                                            # Adding executable...

if(APPLE)                                                                                           # Detecting APPLE...
  message("Adding include files...")                                                                # Printing message...
  set(INCLUDES_3                                                                                    # Setting "INCLUDES" variable...
    ${CMAKE_HOME_DIRECTORY}/${DIRECTORY_3}/include                                                  # Setting example include directory...
    ${NEUTRINO_PATH}/include)                                                                       # Setting Neutrino include directory...
  target_include_directories(                                                                       # Setting include directories...
    ${TARGET_3} PRIVATE                                                                             # Target name.
    ${INCLUDES_3})                                                                                  # All include directories.

  message("Adding linked libraries...")                                                             # Printing message...
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_3}                                                                                     # Target name.
    "-framework OpenGL"                                                                             # OpenGL library.
    "-framework OpenCL"                                                                             # OpenCL library.
    ${GLFW_PATH}/lib-macos/libglfw.3.dylib                                                          # GLFW library.
    "-lm"                                                                                           # "math" library.
    ${NEUTRINO_PATH}/lib/libnu.a)                                                                   # Neutrino library.
endif(APPLE)

if(UNIX AND NOT APPLE)                                                                              # Detecting LINUX...
  message("Adding include files...")                                                                # Printing message...
  set(INCLUDES_3                                                                                    # Setting "INCLUDES" variable...
    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Example include directory.
    ${NEUTRINO_PATH}/include)                                                                       # Neutrino include directory.
  target_include_directories(                                                                       # Setting include directories...
    ${TARGET_3} PRIVATE                                                                             # Target name.
    ${INCLUDES_3})                                                                                  # All include directories.

  message("Adding linked libraries...")                                                             # Printing message...
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_3}                                                                                     # Target name.
    "-lOpenGL"                                                                                      # OpenGL library.
    "-lOpenCL"                                                                                      # OpenCL library.
    "-ldl"                                                                                          # "libdl" library.
    "-lglfw"                                                                                        # GLFW library.
    "-lm"                                                                                           # "math" library.
    ${NEUTRINO_PATH}/lib/libnu.a)                                                                   # "neutrino" library.
endif(UNIX AND NOT APPLE)

if(WIN32)                                                                                           # Detecting WINDOWS...
  message("Adding include files...")                                                                # Printing message...
  set(INCLUDES_3                                                                                    # Setting "INCLUDES" variable...
    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Example include directory.
    ${NEUTRINO_PATH}/include)                                                                       # Neutrino include directory.
  target_include_directories(                                                                       # Setting include directories...
    ${TARGET_3} PRIVATE                                                                             # Target name.
    ${INCLUDES_3})                                                                                  # All include directories.

  message("Adding linked libraries...")                                                             # Printing message...
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_3}                                                                                     # Target name.
    ${CL_PATH}/lib/x64/OpenCL.lib                                                                   # OpenCL library.
    ${GLFW_PATH}/lib-vc2019/glfw3.lib                                                               # GLFW library.
    ${NEUTRINO_PATH}/lib/nu.lib)                                                                    # "neutrino" library.
endif(WIN32)

message("Setting build directory...")                                                               # Printing message...
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build)                                   # Setting build directory...
message(${CMAKE_HOME_DIRECTORY}/build)                                                              # Printing message...

install(
  TARGETS ${TARGET_3}                                                                               # Target name.
  DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})                                                    # Installation path.

message("DONE!")                                                                                    # Printing message...

message("")                                                                                         # Printing message...
message("################################################################################")         # Printing message...
message("#################################### Mesh ######################################")         # Printing message...
message("################################################################################")         # Printing message...

set(TARGET_4 "mesh")                                                                                # Setting executable name...
set(DIRECTORY_4 "Mesh/Code")                                                                        # Setting directory name...

message("Adding source files for ${TARGET_4}...")                                                   # Printing message...
aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY_4}/src SRC_4)                              # Getting all Neutrino source files...
set(SOURCES_4                                                                                       # Setting "SOURCES" variable...
  ${SRC_4})                                                                                         # All project source files.

message("Adding build target as executable...")                                                     # Printing message...
add_executable(${TARGET_4} ${SOURCES_4})                                                            # Adding executable...

if(APPLE)                                                                                           # Detecting APPLE...
  message("Adding include files...")                                                                # Printing message...
  set(INCLUDES_4                                                                                    # Setting "INCLUDES" variable...
    ${CMAKE_HOME_DIRECTORY}/${DIRECTORY_4}/include                                                  # Setting example include directory...
    ${NEUTRINO_PATH}/include)                                                                       # Setting Neutrino include directory...
  target_include_directories(                                                                       # Setting include directories...
    ${TARGET_4} PRIVATE                                                                             # Target name.
    ${INCLUDES_4})                                                                                  # All include directories.

  message("Adding linked libraries...")                                                             # Printing message...
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_4}                                                                                     # Target name.
    "-framework OpenGL"                                                                             # OpenGL library.
    "-framework OpenCL"                                                                             # OpenCL library.
    ${GLFW_PATH}/lib-macos/libglfw.3.dylib                                                          # GLFW library.
    ${GMSH_PATH}/lib/libgmsh.dylib                                                                  # GMSH library.
    "-lm"                                                                                           # "math" library.
    ${NEUTRINO_PATH}/lib/libnu.a)                                                                   # Neutrino library.
endif(APPLE)

if(UNIX AND NOT APPLE)                                                                              # Detecting LINUX...
  message("Adding include files...")                                                                # Printing message...
  set(INCLUDES_4                                                                                    # Setting "INCLUDES" variable...
    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Example include directory.
    ${NEUTRINO_PATH}/include)                                                                       # Neutrino include directory.
  target_include_directories(                                                                       # Setting include directories...
    ${TARGET_4} PRIVATE                                                                             # Target name.
    ${INCLUDES_4})                                                                                  # All include directories.

  message("Adding linked libraries...")                                                             # Printing message...
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_4}                                                                                     # Target name.
    "-lOpenGL"                                                                                      # OpenGL library.
    "-lOpenCL"                                                                                      # OpenCL library.
    "-ldl"                                                                                          # "libdl" library.
    "-lglfw"                                                                                        # GLFW library.
    "-lm"                                                                                           # "math" library.
    "-lgmsh"                                                                                        # GMSH library.
    ${NEUTRINO_PATH}/lib/libnu.a)                                                                   # "neutrino" library.
endif(UNIX AND NOT APPLE)

if(WIN32)                                                                                           # Detecting WINDOWS...
  message("Adding include files...")                                                                # Printing message...
  set(INCLUDES_4                                                                                    # Setting "INCLUDES" variable...
    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Example include directory.
    ${NEUTRINO_PATH}/include)                                                                       # Neutrino include directory.
  target_include_directories(                                                                       # Setting include directories...
    ${TARGET_4} PRIVATE                                                                             # Target name.
    ${INCLUDES_4})                                                                                  # All include directories.

  message("Adding linked libraries...")                                                             # Printing message...
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_4}                                                                                     # Target name.
    ${CL_PATH}/lib/x64/OpenCL.lib                                                                   # OpenCL library.
    ${GLFW_PATH}/lib-vc2019/glfw3.lib                                                               # GLFW library.
    ${NEUTRINO_PATH}/lib/nu.lib)                                                                    # "neutrino" library.
endif(WIN32)

message("Setting build directory...")                                                               # Printing message...
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build)                                   # Setting build directory...
message(${CMAKE_HOME_DIRECTORY}/build)                                                              # Printing message...

install(
  TARGETS ${TARGET_4}                                                                               # Target name.
  DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})                                                    # Installation path.

message("DONE!")                                                                                    # Printing message...


message("")                                                                                         # Printing message...
message("################################################################################")         # Printing message...
message("################################# INSTRUCTIONS #################################")         # Printing message...
message("################################################################################")         # Printing message...

message("Now go to the \"./cmake\" directory created by this command and do one (or more)")         # Printing message...
message("of the following things:")                                                                 # Printing message...
message("")                                                                                         # Printing message...
message("1. Type: \"make install\" in order to build and install the Sinusoid executable.")         # Printing message...
message("2. Type: \"make doc\" in order to build the Doxygen documentation of the project.")        # Printing message...
message("")                                                                                         # Printing message...
message("################################################################################")         # Printing message...
message("############################# CONFIGURATION REPORT #############################")         # Printing message...
message("################################################################################")         # Printing message...
